现有界面语言的简单改进

--- a/app/views/shared/_agenda_item_form.html.erb
+++ b/app/views/shared/_agenda_item_form.html.erb
@@ -3,5 +3,5 @@
   <div class="field">
     <%= f.text_area :content, placeholder: "创建新的日程..." %>
   </div>
-  <%= f.submit "Post", class: "btn btn-primary" %>
+  <%= f.submit "发布", class: "btn btn-primary" %>
 <% end %>
