--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,18 +1,18 @@
-<% provide(:title, 'Sign up') %>
+<% provide(:title, '注册') %>
 <h1>Sign up</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
-      <%= f.label :name %>
+      <%= f.label "姓名" %>
       <%= f.text_field :name, class: 'form-control' %>
-      <%= f.label :email %>
+      <%= f.label "电子邮件" %>
       <%= f.email_field :email, class: 'form-control' %>
-      <%= f.label :password %>
+      <%= f.label "密码" %>
       <%= f.password_field :password, class: 'form-control' %>
-      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.label :password_confirmation, "确认密码" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
+      <%= f.submit "创建新账户", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
