--- a/app/views/agenda_items/_agenda_item.html.erb
+++ b/app/views/agenda_items/_agenda_item.html.erb
@@ -1,11 +1,10 @@
 <li id="agenda_item-<%= agenda_item.id %>">
-  <%= link_to gravatar_for(agenda_item.user, size: 50), agenda_item.user %>
-  <span class="user"><%= link_to agenda_item.user.name, agenda_item.user %></span>
   <span class="content"><%= agenda_item.content %></span>
   <span class="timestamp">
-    Posted <%= time_ago_in_words(agenda_item.created_at) %> ago.
+    预计完成时间: <%= agenda_item.time %> .
     <% if current_user?(agenda_item.user) %>
-    <%= link_to "delete", agenda_item, method: :delete,
+    <%= link_to  "编辑", edit_agenda_item_path(agenda_item.id), method: :get%>
+    <%= link_to "删除", agenda_item, method: :delete,
             data: {confirm: "确定删除？?"} %>
     <% end %>
   </span>
