--- a/app/views/agenda_items/edit.html.erb
+++ b/app/views/agenda_items/edit.html.erb
@@ -1,14 +1,10 @@
-<%= form_for(@agenda_item) do |f| %>
+<% provide(:title, "日程编辑") %>
+<%= form_for@agenda_item do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <div class="field">
     <%= f.text_area :content, placeholder: "创建新的日程..." %>
   </div>
   <%= f.label "日期" %>
   <%= f.datetime_select :time , :class=>"datetimepicker1"%>
-  <%= f.submit "发布", class: "btn btn-primary" %>
+  <%= f.submit "确认修改", class: "btn btn-primary" %>
 <% end %>
-<script type="text/javascript">
-    $(function () {
-        $('#datetimepicker1').datetimepicker();
-    });
-</script>
