--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,6 +2,15 @@
   <div class="container">
     <%= link_to "日程管理系统", root_path, id: "logo" %>
     <nav>
+      <% if logged_in? %>
+        <form class="navbar-form navbar-right search_bar" role="search"
+              action="/search" method="post">
+          <div class="form-group">
+            <input type="text" name="keyword" class="form-control" placeholder="输入关键词...">
+          </div>
+          <button type="submit" class="btn btn-default">搜索</button>
+        </form>
+      <% end %>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "首页", root_path %></li>
         <li><%= link_to "帮助", help_path %></li>
