--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,18 +1,20 @@
 <% provide(:title, "账户设置") %>
 <h1>编辑你的个人信息</h1>
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@user) do |f| %>
-      <%= render 'shared/error_messages', object: f.object %>
-      <%= f.label "姓名" %>
-      <%= f.text_field :name, class: 'form-control' %>
-      <%= f.label "电子邮件" %>
-      <%= f.email_field :email, class: 'form-control' %>
-      <%= f.label "密码" %>
-      <%= f.password_field :password, class: 'form-control' %>
-      <%= f.label :password_confirmation, "确认密码" %>
-      <%= f.password_field :password_confirmation, class: 'form-control' %>
-      <%= f.submit "保存更改", class: "btn btn-primary" %>
-    <% end %>
+<div class="forms">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <%= form_for(@user) do |f| %>
+        <%= render 'shared/error_messages', object: f.object %>
+        <%= f.label "姓名" %>
+        <%= f.text_field :name, class: 'form-control' %>
+        <%= f.label "电子邮件" %>
+        <%= f.email_field :email, class: 'form-control' %>
+        <%= f.label "密码" %>
+        <%= f.password_field :password, class: 'form-control' %>
+        <%= f.label :password_confirmation, "确认密码" %>
+        <%= f.password_field :password_confirmation, class: 'form-control' %>
+        <%= f.submit "保存更改", class: "btn btn-primary" %>
+      <% end %>
+    </div>
   </div>
 </div>
