UI和部分逻辑的改进

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,3 +1,4 @@
 <% provide(:title, "帮助") %>
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<h1>帮助</h1>
+<p style="font-size: 20px ; line-height: 25px">以简单日程为核心的日程管理系统，有点类似于一个微博。登录之后，您可以在首页
+  创建新的日程，以及查看您24h内需要完成的紧急日程；或者在您的账户页面具体查看和管理您的全部日程。</p>
