--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -188,8 +188,12 @@ input {
   }
 
   .content {
+    font-size: 20px;
     display: block;
     margin-left: 60px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    word-break: break-all;
 
     img {
       display: block;
