--- a/app/views/agenda_items/_agenda_item.html.erb
+++ b/app/views/agenda_items/_agenda_item.html.erb
@@ -3,8 +3,8 @@
   <span class="timestamp">
     预计完成时间: <%= agenda_item.time %> .
     <% if current_user?(agenda_item.user) %>
-    <%= link_to  "编辑", edit_agenda_item_path(agenda_item.id), method: :get%>
-    <%= link_to "删除", agenda_item, method: :delete,
+    <%= link_to  "编辑", edit_agenda_item_path(agenda_item.id), method: :get, class: "btn btn-primary"%>
+    <%= link_to "删除", agenda_item, method: :delete, class: 'btn btn-danger',
             data: {confirm: "确定删除？?"} %>
     <% end %>
   </span>
