--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,3 +1,3 @@
 <%= link_to gravatar_for(current_user, size: 50), current_user %>
 <h1><%= current_user.name %></h1>
-<span><%= link_to "查看我的账户", current_user %></span>
+<%= button_to "查看并管理全部日程", current_user, :class => "btn btn-default", :method => :get %>
