--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,3 @@
 <% provide(:title, "关于") %>
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<h1>关于</h1>
+<p style="font-size: 20px">这是一个作为软件工程课个人作业的简单项目，用于简单的日程管理。</p>
