--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -5,5 +5,5 @@
   </ol>
   <%= will_paginate @feed_items %>
   <%else %>
-  <h2>您目前没有待办的日程！</h2>
+  <h2>您目前没有24h内需要完成的日程，您可以点击左侧的按钮查看并管理所有日程，或者在左侧创建一个新的日程！</h2>
 <% end %>
