--- a/app/views/shared/_agenda_item_form.html.erb
+++ b/app/views/shared/_agenda_item_form.html.erb
@@ -4,11 +4,6 @@
     <%= f.text_area :content, placeholder: "创建新的日程..." %>
   </div>
   <%= f.label "日期" %>
-  <%= f.datetime_select :time , :class=>"datetimepicker1"%>
+  <%= f.datetime_select :time , :default => Time.now.localtime%>
   <%= f.submit "发布", class: "btn btn-primary" %>
 <% end %>
-<script type="text/javascript">
-    $(function () {
-        $('#datetimepicker1').datetimepicker();
-    });
-</script>
