gravatar头像设置提示

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,6 +9,7 @@
         <%= f.text_field :name, class: 'form-control' %>
         <%= f.label "电子邮件" %>
         <%= f.email_field :email, class: 'form-control' %>
+        <p style="font-size: 12px">本网站使用<a href="http://cn.gravatar.com/">Gravatar</a>提供的头像服务，您可以在其网站上为您的Email设置头像！</p>
         <%= f.label "密码" %>
         <%= f.password_field :password, class: 'form-control' %>
         <%= f.label :password_confirmation, "确认密码" %>
